--- a/android/app/src/main/res/layout/fragment_camera.xml
+++ b/android/app/src/main/res/layout/fragment_camera.xml
@@ -11,13 +11,51 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <Button
-        android:id="@+id/captureButton"
+    <ImageView
+        android:id="@+id/leftArrowImageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
+        android:padding="10dp"
+        android:contentDescription="@string/left_arrow_button"
+        android:src="@drawable/ic_left_arrow"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/flashLightImageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="24dp"
+        android:contentDescription="@string/flashlight_button"
+        android:padding="10dp"
+        android:src="@drawable/ic_flashlight_off"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/captureImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="30dp"
+        android:contentDescription="@string/capture_button"
+        android:src="@drawable/ic_camera_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/getPhotoImageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/get_photo_button"
+        android:padding="10dp"
+        android:src="@drawable/ic_image_button"
+        app:layout_constraintBottom_toBottomOf="@id/captureImageView"
+        app:layout_constraintEnd_toStartOf="@id/captureImageView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/captureImageView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
