--- a/iOS/iOS/Src/App/Scene/History/Cell/HistoryCell/HistoryCell.xib
+++ b/iOS/iOS/Src/App/Scene/History/Cell/HistoryCell/HistoryCell.xib
@@ -18,7 +18,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="91" id="rid-m5-ag4">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="91" id="rid-m5-ag4" customClass="HistoryCell" customModule="iOS" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="414" height="91"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="rid-m5-ag4" id="PZt-8k-2uI" customClass="HistoryCell" customModule="iOS" customModuleProvider="target">
@@ -62,12 +62,17 @@
                     <constraint firstItem="LsD-vx-t8u" firstAttribute="leading" secondItem="Yje-53-vjK" secondAttribute="leading" id="yOY-pp-8rP"/>
                 </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="dateLabel" destination="LsD-vx-t8u" id="NDU-4W-lTw"/>
+                <outlet property="serialNumberLabel" destination="LZp-5e-sBF" id="bvn-Zt-mpI"/>
+                <outlet property="valueLabel" destination="Yje-53-vjK" id="clJ-IC-qGX"/>
+            </connections>
             <point key="canvasLocation" x="108.69565217391305" y="139.62053571428569"/>
         </tableViewCell>
     </objects>
     <resources>
         <namedColor name="grayText">
-            <color red="0.42352941176470588" green="0.47843137254901957" blue="0.55294117647058827" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.42399999499320984" green="0.4779999852180481" blue="0.55299997329711914" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
