--- a/iOS/iOS/Src/App/Scene/History/Cell/MeterTypeCell/MeterTypeCell.xib
+++ b/iOS/iOS/Src/App/Scene/History/Cell/MeterTypeCell/MeterTypeCell.xib
@@ -1,10 +1,61 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Graphik-Regular.ttf">
+            <string>Graphik-Regular</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="zkW-qZ-WxY" customClass="MeterTypeCell" customModule="iOS" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="135" height="44"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="vep-aU-vol" customClass="MeterTypeCell" customModule="iOS" customModuleProvider="target">
+                <rect key="frame" x="0.0" y="0.0" width="135" height="44"/>
+                <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Oqo-nM-OsH" customClass="DesignableUIButton" customModule="iOS" customModuleProvider="target">
+                        <rect key="frame" x="0.0" y="0.0" width="135" height="44"/>
+                        <color key="backgroundColor" name="blue"/>
+                        <fontDescription key="fontDescription" name="Graphik-Regular" family="Graphik" pointSize="13"/>
+                        <state key="normal" title="Холодная вода">
+                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </state>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <real key="value" value="4"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </button>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="Oqo-nM-OsH" firstAttribute="top" secondItem="vep-aU-vol" secondAttribute="top" id="6pm-IM-Tdm"/>
+                    <constraint firstAttribute="bottom" secondItem="Oqo-nM-OsH" secondAttribute="bottom" id="CSa-Zd-Q9i"/>
+                    <constraint firstAttribute="trailing" secondItem="Oqo-nM-OsH" secondAttribute="trailing" id="ViA-yL-rhx"/>
+                    <constraint firstItem="Oqo-nM-OsH" firstAttribute="leading" secondItem="vep-aU-vol" secondAttribute="leading" id="gyL-cv-qNJ"/>
+                </constraints>
+            </collectionViewCellContentView>
+            <size key="customSize" width="135" height="44"/>
+            <point key="canvasLocation" x="0.7246376811594204" y="-218.30357142857142"/>
+        </collectionViewCell>
     </objects>
+    <designables>
+        <designable name="Oqo-nM-OsH">
+            <size key="intrinsicContentSize" width="92" height="28"/>
+        </designable>
+    </designables>
+    <resources>
+        <namedColor name="blue">
+            <color red="0.0078431372549019607" green="0.72941176470588232" blue="0.90980392156862744" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
