--- a/iOS/iOS/Src/App/Scene/Root/Root.storyboard
+++ b/iOS/iOS/Src/App/Scene/Root/Root.storyboard
@@ -12,12 +12,12 @@
         <scene sceneID="huT-Q9-O2o">
             <objects>
                 <tabBarController storyboardIdentifier="rootVC" extendedLayoutIncludesOpaqueBars="YES" id="q1Z-Uf-LXT" customClass="RootViewController" customModule="iOS" customModuleProvider="target" sceneMemberID="viewController">
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="guE-OM-mou">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="guE-OM-mou" customClass="CustomTabBar" customModule="iOS" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="tintColor" name="purple"/>
-                        <color key="selectedImageTintColor" name="purple"/>
+                        <color key="selectedImageTintColor" name="blue"/>
                     </tabBar>
                     <connections>
                         <segue destination="Ble-bz-n2m" kind="relationship" relationship="viewControllers" id="9sl-ve-rA6"/>
@@ -33,7 +33,9 @@
         <scene sceneID="Ft3-fO-joj">
             <objects>
                 <navigationController extendedLayoutIncludesOpaqueBars="YES" automaticallyAdjustsScrollViewInsets="NO" id="Ble-bz-n2m" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="" image="tab_bar_video" id="sW9-oE-Sz0"/>
+                    <tabBarItem key="tabBarItem" title="" image="HistoryTab" selectedImage="HistoryTab" id="sW9-oE-Sz0">
+                        <color key="badgeColor" name="blue"/>
+                    </tabBarItem>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" backIndicatorImage="light_icon_back" backIndicatorTransitionMaskImage="light_icon_back" id="QgT-AP-XXN">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
@@ -56,7 +58,9 @@
         <scene sceneID="SE2-6b-sbH">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="wxU-Uc-RSD" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" tag="1" title="" image="tab_bar_strar" id="4ef-rr-XQ8"/>
+                    <tabBarItem key="tabBarItem" tag="1" title="" image="CameraTab" selectedImage="CameraTab" id="4ef-rr-XQ8">
+                        <color key="badgeColor" name="blue"/>
+                    </tabBarItem>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" backIndicatorImage="light_icon_back" backIndicatorTransitionMaskImage="light_icon_back" id="xcB-hK-rIp">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
@@ -96,7 +100,9 @@
         <scene sceneID="2MA-a4-Lrj">
             <objects>
                 <navigationController extendedLayoutIncludesOpaqueBars="YES" automaticallyAdjustsScrollViewInsets="NO" id="KIk-Re-dD3" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" tag="2" title="" image="tab_bar_sto" id="1xL-Uw-imw"/>
+                    <tabBarItem key="tabBarItem" tag="2" title="" image="PersonTab" selectedImage="PersonTab" id="1xL-Uw-imw">
+                        <color key="badgeColor" name="blue"/>
+                    </tabBarItem>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" backIndicatorImage="light_icon_back" backIndicatorTransitionMaskImage="light_icon_back" id="say-Hx-G12">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
@@ -124,10 +130,13 @@
         </scene>
     </scenes>
     <resources>
+        <image name="CameraTab" width="33" height="33"/>
+        <image name="HistoryTab" width="28" height="28"/>
+        <image name="PersonTab" width="26" height="26"/>
         <image name="light_icon_back" width="24" height="24"/>
-        <image name="tab_bar_sto" width="28" height="28"/>
-        <image name="tab_bar_strar" width="28" height="28"/>
-        <image name="tab_bar_video" width="24" height="24"/>
+        <namedColor name="blue">
+            <color red="0.0080000003799796104" green="0.72899997234344482" blue="0.9100000262260437" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="purple">
             <color red="0.32899999618530273" green="0.32400000095367432" blue="0.4779999852180481" alpha="0.33000001311302185" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
