--- a/android/camera/src/main/res/layout/activity_camera.xml
+++ b/android/camera/src/main/res/layout/activity_camera.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".scenes.main.MainActivity">
+    android:layout_height="match_parent">
 
     <TextureView
         android:id="@+id/textureView"
@@ -17,8 +15,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
-        android:padding="10dp"
         android:contentDescription="@string/left_arrow_button"
+        android:padding="10dp"
         android:src="@drawable/ic_left_arrow"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
