--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="colorLightBlack">#343944</color>
     <color name="colorLightGray">#EBEBEB</color>
     <color name="colorDarkWhite">#F7F8FA</color>
+    <color name="colorGray">#95A7B8</color>
 </resources>
