--- a/android/app/src/main/res/layout/fragment_profile.xml
+++ b/android/app/src/main/res/layout/fragment_profile.xml
@@ -1,25 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/indicatorTypeContainer"
-    android:layout_width="wrap_content"
-    android:layout_height="44dp"
-    android:layout_marginStart="10dp"
-    android:layout_marginTop="20dp"
-    android:background="@drawable/bg_rounded_text_light_blue">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/indicatorTypeTitleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/graphic_regular"
-        android:paddingStart="20dp"
-        android:paddingEnd="20dp"
-        android:textColor="@android:color/white"
-        android:textSize="13sp"
+        android:text="Jopa"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
