--- a/android/camera/src/main/res/values/styles.xml
+++ b/android/camera/src/main/res/values/styles.xml
@@ -1,9 +1,10 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@android:color/white</item>
         <item name="colorPrimaryDark">@android:color/white</item>
-        <item name="colorAccent">@color/colorGray</item>
+        <item name="colorAccent">@android:color/white</item>
     </style>
+
 </resources>
