--- a/android/app/src/main/res/navigation/camera_navigation_graph.xml
+++ b/android/app/src/main/res/navigation/camera_navigation_graph.xml
@@ -10,10 +10,22 @@
         android:label="ProcessingFragment" >
         <action
             android:id="@+id/openResultFragment"
-            app:destination="@id/resultFragment" />
+            app:destination="@id/resultFragment"
+            app:popUpTo="@id/camera_navigation"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/resultFragment"
         android:name="ru.webant.openmeters.scenes.camera.result.ResultFragment"
-        android:label="ResultFragment" />
+        android:label="ResultFragment" >
+        <action
+            android:id="@+id/openAllReadyFragment"
+            app:destination="@id/allReadyFragment"
+            app:popUpTo="@id/camera_navigation"
+            app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/allReadyFragment"
+        android:name="ru.webant.openmeters.scenes.camera.all_ready.AllReadyFragment"
+        android:label="AllReadyFragment" />
 </navigation>
